adjustments to container port and volume table columns

--- a/ui/sections/containers/controls/table-volume.reel/table-volume.css
+++ b/ui/sections/containers/controls/table-volume.reel/table-volume.css
@@ -1,3 +1,8 @@
 .TableVolume {
 
 }
+
+.TableVolume .Table-cells > div:nth-child(3),
+.TableVolume .TableHeaderLayout-row .TableHeaderLayout-cell:nth-child(3) {
+    max-width: 5.2em;
+}
