--- a/ui/sections/containers/controls/table-settings.reel/table-settings.css
+++ b/ui/sections/containers/controls/table-settings.reel/table-settings.css
@@ -1,3 +1,17 @@
-.TableSettings {
+.TableSettings {}
 
+.TableSettings .Table-cells > div:nth-child(1),
+.TableSettings .TableHeaderLayout-row .TableHeaderLayout-cell:nth-child(1) {
+    min-width: 9em;
+}
+
+.TableSettings .Table-cells > div:nth-child(2),
+.TableSettings .TableHeaderLayout-row .TableHeaderLayout-cell:nth-child(2) {
+    min-width: 9em;
+}
+
+.TableSettings .Table-cells > div:nth-child(3),
+.TableSettings .TableHeaderLayout-row .TableHeaderLayout-cell:nth-child(3) {
+    min-width: 5em;
+    flex: 0;
 }
