Fix available disks folding issue

--- a/ui/sections/storage/inspectors/available-disks.reel/disks-category.reel/_disks-category.css
+++ b/ui/sections/storage/inspectors/available-disks.reel/disks-category.reel/_disks-category.css
@@ -1,14 +1,15 @@
 .AvailableDisksCategory {
-    flex: 0.000000001;
-
     &.is-expanded {
         flex: 1;
+
+        & .Scrollview-transform {
+            display: block;
+        }
     }
 
     & .Scrollview-transform {
-        display: block;
+        display: none;
     }
-
 }
 
 .AvailableDisksCategory-toggle.Button {
