--- a/ui/controls/section.reel/section-root.reel/_section-root.css
+++ b/ui/controls/section.reel/section-root.reel/_section-root.css
@@ -9,9 +9,20 @@
 }
 
 .SectionRoot-overview {
+    position: relative;
     display: flex;
     flex-direction: column;
     min-height: 15em;
+
+    &:after {
+        position: absolute;
+        content: '';
+        bottom: 0;
+        left: 0;
+        right: 0;
+        height: 1.5em;
+        background-image: linear-gradient(rgba(47, 50, 51, 0), rgba(47, 50, 51, 1));
+    }
 
     & > :first-child {
         display: flex;
