--- a/ui/sections/storage/inspectors/encrypted-volume-importer.reel/_encrypted-volume-importer.css
+++ b/ui/sections/storage/inspectors/encrypted-volume-importer.reel/_encrypted-volume-importer.css
@@ -1,10 +1,40 @@
+.CascadingListItem-EncryptedVolumeImporter.CascadingListItem {
+    flex: 1;
+    min-width: 37.25em;
+    max-width: 50em;
+}
+
+.EncryptedVolumeImporter .Inspector {
+    /* magic number tided to sidebar width */
+    margin-right: 12.3em;
+}
+
+/* maxes out scrollbar */
+.EncryptedVolumeImporter > .Inspector .Scrollview .Scrollview-transform {
+    max-height: 100%;
+}
+
+.EncryptedVolumeImporter .Inspector-body {
+    margin: 0;
+    flex: 1;
+    display: flex;
+}
+
 .EncryptedVolumeImporter-content {
     flex: 1;
     display: flex;
     flex-direction: column;
 }
 
+.EncryptedVolumeImporter-disks {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+}
+
 .EncryptedVolumeImporter-sidebar {
+    display: flex;
+    flex-direction: column;
     position: absolute;
     top: 0;
     bottom: 0;
@@ -16,4 +46,8 @@
     border-left: 2px solid #232629;
 }
 
+.Inspector.is-locked + .EncryptedVolumeImporter-sidebar .FoldableSection-content {
+    height: 0 !important;
+    pointer-event: none;
+}
 
