cleans up storage overview and storage import columes

--- a/ui/controls/section.reel/section-root.reel/_section-root.css
+++ b/ui/controls/section.reel/section-root.reel/_section-root.css
@@ -12,7 +12,7 @@
     position: relative;
     display: flex;
     flex-direction: column;
-    min-height: 15em;
+    max-height: 15em;
 
     &:after {
         position: absolute;
