--- a/ui/controls/field-treeview.reel/_field-treeview.css
+++ b/ui/controls/field-treeview.reel/_field-treeview.css
@@ -1,13 +1,6 @@
-.FieldTreeview {}
+.FieldTreeview-path { position: relative; }
 
-.FieldTreeview-path {
-    position: relative;
-
-    & input {
-        /* padding-left: 1.75em; */
-    }
-}
-
+.FieldTreeview-path-input { flex: 1; }
 
 .FieldTreeview-icon {
     display: flex;
