--- a/ui/inspectors/system-section.reel/system-section.css
+++ b/ui/inspectors/system-section.reel/system-section.css
@@ -1,1 +1,1 @@
-.SystemSection.has-table{min-width:45em}
+.SystemSection-substitution,.SystemSection-substitution>div:first-child{display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-orient:vertical;-webkit-box-direction:normal;-ms-flex-direction:column;flex-direction:column;-webkit-box-flex:1;-ms-flex:1;flex:1}.SystemSection-substitution>div:first-child .Scrollview-transform{display:block}.SystemSection.has-table{min-width:45em}
