sets bootpool actions to disable based on selection

--- a/ui/sections/system/inspectors/boot-pool.reel/boot-pool-action.reel/_boot-pool-action.css
+++ b/ui/sections/system/inspectors/boot-pool.reel/boot-pool-action.reel/_boot-pool-action.css
@@ -28,12 +28,12 @@
     }
 }
 
-.BootPoolAction .BootPoolAction-delete,
+/* .BootPoolAction .BootPoolAction-delete,
 .BootPoolAction .BootPoolAction-keep,
 .BootPoolAction .BootPoolAction-activate,
 .BootPoolAction .BootPoolAction-clone {
     display: none;
-}
+} */
 
 
 
