--- a/ui/sections/system/inspectors/boot-pool.reel/_boot-pool.css
+++ b/ui/sections/system/inspectors/boot-pool.reel/_boot-pool.css
@@ -1,3 +1,7 @@
+.BootPool-table {
+    margin-bottom: 2em;
+}
+
 .BootPool-table .TableEditable-toolbar {
     height: 2em;
 }
@@ -29,4 +33,8 @@
 .BootPool-table .TableHeaderLayout-row .TableHeaderLayout-cell:nth-child(5) {
     flex: 0;
     min-width: 4.5em;
+}
+
+.BootPool-activeEnvironmentTable .BootPoolAction-delete {
+    display: none;
 }
