--- a/ui/sections/storage/inspectors/disk.reel/_disk.css
+++ b/ui/sections/storage/inspectors/disk.reel/_disk.css
@@ -1,3 +1,15 @@
 .Disk {
     min-width: 22em;
 }
+
+.Disk .Inspector-optionalButtons {
+
+    & button {
+        display: block;
+        margin-right: 16px;
+
+        &.hide {
+            display: none;
+        }
+    }
+}
