--- a/ui/inspectors/calendar.reel/calendar-widget.reel/day-column.reel/_day-column.css
+++ b/ui/inspectors/calendar.reel/calendar-widget.reel/day-column.reel/_day-column.css
@@ -1,30 +1,37 @@
-.DayColumn.is-today {
+.DayColumn {
     position: relative;
     z-index: 1;
-    background: rgba(255,255,255,.05);
-    box-shadow: 0 0 8px 2px rgba(0,0,0,.2);
 
-    &:after {
+    &:before {
+        display: none;
         content: '';
         position: absolute;
-        top: -1px;
-        left: -1px;
-        right: 0px;
-        bottom: 0px;
-        border: 1px solid #3b4042;
-        z-index: 100;
-        pointer-events: none;
+        top:    0;
+        left:   0;
+        right:  0;
+        bottom: 0;
+        border: 1px dashed currentColor;
+    }
 
-        /* removes border on DayView */
+    &.willAcceptDrop:before {
+        display: block;
+        animation: blink 1s infinite ease;
+    }
+
+    &.acceptDrop:before {
+        display: block;
+        border: 1px dashed rgba(43,156,216,1);
+        background-color: rgba(43,156,216,0.1);
+    }
+
+    &.is-today {
+        background: rgba(255,255,255,.05);
+        box-shadow: 0 0 8px 2px rgba(0,0,0,.2);
+
         @nest .DayView & {
-            display: none;
+            box-shadow: none;
         }
     }
-
-    @nest .DayView & {
-        box-shadow: none;
-    }
-
 }
 
 .DayColumn-events {
