--- a/ui/inspectors/calendar.reel/calendar-widget.reel/day-header.reel/_day-header.css
+++ b/ui/inspectors/calendar.reel/calendar-widget.reel/day-header.reel/_day-header.css
@@ -1,3 +1,7 @@
 .DayHeader.is-today {
     background: rgba(255,255,255,.05);
 }
+
+.DayHeader:not(:last-child) {
+    border-right: 1px solid #181818;
+}
