sets list-item-icon to change color on list-item selection

--- a/ui/controls/list.reel/list-item.reel/_list-item.css
+++ b/ui/controls/list.reel/list-item.reel/_list-item.css
@@ -58,6 +58,10 @@
     @nest .ListItem:hover & {
         color: #fff;
     }
+
+    @nest .ListItem.selected & {
+        color: #fff;
+    }
 }
 
 /* List Item arrow */
