added scrub button to the boot pool UI

--- a/ui/sections/system/inspectors/boot-pool.reel/_boot-pool.css
+++ b/ui/sections/system/inspectors/boot-pool.reel/_boot-pool.css
@@ -38,3 +38,10 @@
 .BootPool-activeEnvironmentTable .BootPoolAction-delete {
     display: none;
 }
+
+.BootPool .Inspector-optionalButtons {
+
+    & button {
+        display: block;
+    }
+}
