fixes treeview styles due to class position

--- a/ui/controls/field-treeview.reel/_field-treeview.css
+++ b/ui/controls/field-treeview.reel/_field-treeview.css
@@ -31,10 +31,12 @@
 .FieldTreeview-treeView {
     position: absolute;
     visibility: hidden;
+    opacity: 0;
 
     @nest .FieldTreeview.is-expanded & {
         position: relative;
         visibility: visible;
         margin-bottom: 1em;
+        opacity: 1;
     }
 }
