--- a/ui/controls/list.reel/list-item.reel/_list-item.css
+++ b/ui/controls/list.reel/list-item.reel/_list-item.css
@@ -2,7 +2,6 @@
     display: flex;
     align-items: center;
     height:         3em;
-    line-height:    3em;
     padding-left: 1em;
     position: relative;
     font-family: 'lato', 'Helvetica Neue', 'Helvetica', sans-serif;
@@ -40,11 +39,23 @@
     /* removes top border from first child and any sibling ListItem*/
 }
 
-.ListItem-label {
+.ListItem-labels {
     flex: 1;
+    display: flex;
+    flex-direction: column;
+}
+
+.ListItem-label {
     overflow: hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
+}
+
+.ListItem-subLabel {
+    font-size: .75em;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    color: #666;
 }
 
 .ListItem-icon > * {
@@ -84,10 +95,4 @@
 .ListItem-status {
     font-size: .6em;
     margin-right: .5rem;
-}
-
-.ListItem-info {
-    font-weight: normal;
-    font-size: 0.8em;
-    margin-left: 2em;
 }
