--- a/ui/controls/viewer.reel/_viewer.css
+++ b/ui/controls/viewer.reel/_viewer.css
@@ -112,3 +112,11 @@
     max-width: 15em;
     padding: 1em 1em;
 }
+
+/* Controls */
+
+.Viewer-controls {
+    padding: .75em 1em;
+    background: #404040;
+    border-bottom: 1px solid color(#404040 l(10%));
+}
