--- a/ui/sections/accounts/inspectors/kerberos-keytab.reel/_kerberos-keytab.css
+++ b/ui/sections/accounts/inspectors/kerberos-keytab.reel/_kerberos-keytab.css
@@ -1,3 +1,4 @@
-.KerberosKeytab {
-
+.KerberosKeytab-entries .Table-row > div:nth-child(1),
+.KerberosKeytab-entries .TableHeaderLayout-row .TableHeaderLayout-cell:nth-child(1) {
+    max-width: 4.5em;
 }
