added dataset sizes

--- a/ui/controls/list.reel/list-item.reel/_list-item.css
+++ b/ui/controls/list.reel/list-item.reel/_list-item.css
@@ -85,3 +85,9 @@
     font-size: .6em;
     margin-right: .5rem;
 }
+
+.ListItem-info {
+    font-weight: normal;
+    font-size: 0.8em;
+    margin-left: 2em;
+}
