--- a/ui/inspectors/calendar.reel/calendar-widget.reel/_calendar-widget.css
+++ b/ui/inspectors/calendar.reel/calendar-widget.reel/_calendar-widget.css
@@ -17,6 +17,7 @@
     border-spacing: 0;
     font-weight: 200;
     border: 1px solid #16171A;
+    min-width: 45em;
 }
 
 .CalendarWidget > header { margin-bottom: 1em; }
