--- a/ui/controls/viewer.reel/_viewer.css
+++ b/ui/controls/viewer.reel/_viewer.css
@@ -20,8 +20,15 @@
 .Viewer-title {
     padding: .5em 1em;
     line-height: 2em;
-    background: #0f1213;
-    color: #fff;
+    flex-shrink: 0;
+    font-size: 1em;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    background-color: #0f1213;
+    text-shadow: 0 1px rgba(0,0,0,.2);
+    font-weight: 400;
+    border-bottom: 1px solid #2f3233;
 }
 
 /* Create */
@@ -43,9 +50,7 @@
     box-shadow: inset 0 1px 0 rgba(255,255,255,.2);
     transition: background-color .25s;
 
-    &:hover {
-        background-color: #0E722B;
-    }
+    &:hover { background-color: #0E722B; }
 
     & svg {
         width:  1.4em;
