--- a/ui/sections/vms/inspectors/virtual-machine.reel/virtual-machine.css
+++ b/ui/sections/vms/inspectors/virtual-machine.reel/virtual-machine.css
@@ -1,1 +1,1 @@
-.VirtualMachine{min-width:21em}.VirtualMachine-actions{display:none;margin-bottom:1em}.VirtualMachine-actions>:not(:first-child){margin-left:.5em}.VirtualMachine.has-actions .VirtualMachine-actions{display:-webkit-box;display:-ms-flexbox;display:flex}
+.VirtualMachine{min-width:352px!important;min-width:22rem!important}.VirtualMachine-actions{display:none;margin-bottom:1em}.VirtualMachine-actions>:not(:first-child){margin-left:.5em}.VirtualMachine.has-actions .VirtualMachine-actions{display:-webkit-box;display:-ms-flexbox;display:flex}
