--- a/ui/sections/system/inspectors/support.reel/support.css
+++ b/ui/sections/system/inspectors/support.reel/support.css
@@ -1,1 +1,1 @@
-.Support{max-width:30em}.Support-header{background:#2f3233;padding:1em}.Support-header a{color:#2b9cd8}
+.Support{width:480px!important;width:30rem!important}.Support-header{background:#2f3233;padding:1em}.Support-header a{color:#2b9cd8}
