--- a/ui/sections/wizard/inspectors/wizard.reel/wizard.css
+++ b/ui/sections/wizard/inspectors/wizard.reel/wizard.css
@@ -1,3 +1,4 @@
-.Wizard.is-loading .controls {
-    display: none;
+.Wizard.is-loading .controls,
+.Wizard .wizard-is-hidden {
+    display: none !important;
 }
