Add encrypted volume actions

--- a/ui/sections/storage/inspectors/encrypted-volume-actions.reel/encrypted-volume-actions.css
+++ b/ui/sections/storage/inspectors/encrypted-volume-actions.reel/encrypted-volume-actions.css
@@ -1,3 +1,1 @@
-.EncryptedVolumeActions {
-
-}
+.EncryptedVolumeActions .section{display:none}.EncryptedVolumeActions.backup .backupSection,.EncryptedVolumeActions.lock .lockSection,.EncryptedVolumeActions.rekey .rekeySection,.EncryptedVolumeActions.restore .restoreSection,.EncryptedVolumeActions.unlock .unlockSection{display:block}
