small layout improvement on viewer-controls

--- a/ui/controls/viewer.reel/_viewer.css
+++ b/ui/controls/viewer.reel/_viewer.css
@@ -121,7 +121,13 @@
 /* Controls */
 
 .Viewer-controls {
-    padding: .75em 1em;
+    height: 3em;
+    padding: 0 1em;
+    display: flex;
+    align-items: center;
     background: #404040;
-    border-bottom: 1px solid color(#404040 l(10%));
+
+    & .montage-Slot {
+        flex: 1;
+    }
 }
