--- a/ui/sections/wizard/inspectors/volume.reel/volume.css
+++ b/ui/sections/wizard/inspectors/volume.reel/volume.css
@@ -1,8 +1,6 @@
 .Volume-volumeCreator .Topology,
 .Volume-volumeCreator .InspectorFooter,
 .Volume-volumeCreator .FieldCheckbox,
-.Volume-volumeCreator .VolumeCreator-sidebar,
-.Volume-volumeCreator .Topologizer-legend-item,
-.Volume-volumeCreator .Topologizer-graph {
+.Volume-volumeCreator .VolumeCreator-sidebar {
     display: none !important;
 }
