adds placeholder title, adds steps counter, adds layout styles

--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -308,6 +308,7 @@ $Icons
 .flex-justifyContent--spaceBetween { justify-content: space-between; }
 
 .flex-alignItems--center { align-items: center; }
+.flex-align--bottom      { align-items: flex-end; }
 
 /* Table Styles */
 
