--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -172,15 +172,19 @@ $Icons
 
 ::-webkit-input-placeholder { /* Chrome/Opera/Safari */
     font-style: italic;
+    color: #6d6d6d;
 }
 ::-moz-placeholder { /* Firefox 19+ */
     font-style: italic;
+    color: #6d6d6d;
 }
 :-ms-input-placeholder { /* IE 10+ */
     font-style: italic;
+    color: #6d6d6d;
 }
 :-moz-placeholder { /* Firefox 18- */
     font-style: italic;
+    color: #6d6d6d;
 }
 
 /*input { height: 2em; }*/
