Cosmetic fixes for the ntp sync now dropdown/button
Ticket: #19271

--- a/ui/inspectors/directory-services.reel/_directory-services.css
+++ b/ui/inspectors/directory-services.reel/_directory-services.css
@@ -11,3 +11,9 @@
     display: flex;
     justify-content: space-between;
 }
+
+.DirectoryServices-ntpSyncNow-button {
+    display: flex;
+    justify-content: flex-end;
+    padding-bottom: 1em;
+}
