edits alignment of wizard table styles, addes empty message, adds missing class for css hook

--- a/ui/sections/wizard/inspectors/directory-services.reel/table-freeipa.reel/table-freeipa.css
+++ b/ui/sections/wizard/inspectors/directory-services.reel/table-freeipa.reel/table-freeipa.css
@@ -1,3 +1,4 @@
-.TableFreeipa {
-
+.TableFreeipa .Table-cells > div:nth-child(1),
+.TableFreeipa .TableHeaderLayout-row .TableHeaderLayout-cell:nth-child(1) {
+    max-width: 8em;
 }
