--- a/ui/sections/wizard/inspectors/wizard.reel/_wizard.css
+++ b/ui/sections/wizard/inspectors/wizard.reel/_wizard.css
@@ -4,7 +4,7 @@
 }
 
 .Wizard {
-    max-width: 45em;
+    max-width: 50em;
     padding: 1em;
     display: flex;
     flex: 1;
@@ -17,6 +17,8 @@
     position: relative;
 }
 
+.Wizard-header-title { font-size: 1.25em; }
+
 .Wizard-counter {
     position: absolute;
     right: 0;
@@ -27,4 +29,33 @@
 
 .Wizard .VolumeCreator .Inspector {
     margin: 0;
+}
+
+/* controls */
+
+.Wizard-controls div:last-child {
+    flex: 1;
+
+    & button + button { margin-left: .5em; }
+}
+
+.Wizard-controls-previous {
+    & svg {
+        height: 1em;
+        transform: rotate(180deg);
+        margin-right: 0 !important;
+    }
+}
+
+.Wizard-controls-next {
+    display: flex;
+    align-items: center;
+    padding-left:  1.5em !important;
+    padding-right: 1em !important;
+    & svg {
+        height: 1em;
+        order: 1;
+        margin-right: 0 !important;
+        margin-left: .25em;
+    }
 }
