inspector footer should be toggled to display:flex when visible

--- a/ui/controls/inspector-footer.reel/_inspector-footer.css
+++ b/ui/controls/inspector-footer.reel/_inspector-footer.css
@@ -5,7 +5,7 @@
 
 .InspectorFooter {
     padding: 1em;
-    display: none;
+    display: flex;
     flex-shrink: 0;
     justify-content: space-between;
 }
