--- a/ui/controls/inspector-section-title.reel/_inspector-section-title.css
+++ b/ui/controls/inspector-section-title.reel/_inspector-section-title.css
@@ -1,6 +1,6 @@
 .InspectorSectionTitle {
     position: relative;
-    margin: 1.5em 0 1em;
+    margin: 2em 0 1em;
     line-height: 1.5em;
     text-align: left;
     color: #fff;
@@ -21,7 +21,7 @@
 .InspectorSectionTitle-title {
     position: relative;
     font-weight: 400;
-    margin-bottom: .2rem;
+    /* margin-bottom: .2rem; */
 }
 
 .InspectorSectionTitle-subtitle {
